--- a/README.adoc
+++ b/README.adoc
@@ -668,7 +668,7 @@ to only allow Istio to perform the retries.
 
 [role="code_command hotspot", subs="quotes"]
 ----
-#Create the `config.yaml`.#
+#Create the `config.yaml` file.#
 `config.yaml`
 ----
 
@@ -687,16 +687,16 @@ used by the pod's containers. The environment variables are defined in the pod's
 #Update the `istio.yaml` file.#
 `istio.yaml`
 ----
-[role="edit_command_text"]
-Add the [hotspot=invConfig file=1]`envFrom` field in the [hotspot file=1]`istio.yaml` file, 
-to inject the [hotspot=configMap file=0]`ConfigMap` with the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` property into your pods, 
-
-
 istio.yaml
 [source, yaml, linenums, role='code_column']
 ----
 include::finish/istio.yaml[]
 ----
+[role="edit_command_text"]
+Add the [hotspot=invConfig file=1]`envFrom` field in the [hotspot file=1]`istio.yaml` file, 
+to inject the [hotspot=configMap file=0]`ConfigMap` with the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` property into your pods, 
+
+
 
 The [hotspot=configName file=0]`name` of the [hotspot=configMap file=0]`ConfigMap`, which is [hotspot=configName file=0]`inventory-config`, 
 becomes the environment variable [hotspot=configName2 file=1]`name` that is specified in the [hotspot=invConfig file=1]`envFrom` field. 
@@ -807,21 +807,22 @@ to add fallback to your microservices.
 The `@Fallback` annotation dictates a method to call when the original method encounters a failed execution. 
 If your microservices have a Retry policy specified, then the fallback occurs after all of the retries have failed. 
 
-[role="code_command hotspot=fallbackMethod hotspot=fallback hotspot=getPropertiesForHost", subs="quotes"]
+[role="code_command", subs="quotes"]
 ----
 #Update the `InventoryResource.java` file.#
 `inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java`
+----
+InventoryResource.java
+[source, Java, linenums, role='code_column hide_tags=copyright']
+----
+include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[]
 ----
 [role="edit_command_text"]
 Create the [hotspot=fallbackMethod file=1]`getPropertiesFallback()` method. 
 Add the [hotspot=fallback file=1]`@Fallback` annotation before the [hotspot=getPropertiesForHost file=1]`getPropertiesForHost()` method, 
 to call the [hotspot=fallbackMethod file=1]`getPropertiesFallback()` method when a failure occurs.
 
-InventoryResource.java
-[source, Java, linenums, role='code_column hide_tags=copyright']
-----
-include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[]
-----
+
 
 The [hotspot=fallbackMethod file=1]`getPropertiesFallback()` method, which is the designated fallback method for the original 
 [hotspot=getPropertiesForHost file=1]`getPropertiesForHost()` method, prints out a warning message in the browser saying that 
