--- a/README.adoc
+++ b/README.adoc
@@ -224,7 +224,7 @@ include::finish/inventory/src/main/java/io/openliberty/guides/inventory/Inventor
 
 To simulate that your `system` service is temporarily down, due to brief intermittent issues, you will pause the pod that is associated
 with your `system` service, and try to send requests to the service. When the `system` pod is paused, requests to the service return a `500` status code, 
-and the [hotspot=getProperties file=0]`getProperties()` in [hotspot file=0]`InventoryResource.java` throws a `ProcessingException`. 
+and the [hotspot=getProperties file=0]`systemClient.getProperties()` in [hotspot file=0]`InventoryResource.java` throws a `ProcessingException`. 
 
 To retry the requests to your `system` service after an `ProcessingException` has occurred, add the `@Retry` annotation.
 
@@ -235,12 +235,18 @@ To retry the requests to your `system` service after an `ProcessingException` ha
 ----
 [role="edit_command_text"]
 Add the [hotspot=mpRetry file=0]`@Retry` annotation before the [hotspot=getPropertiesForHost file=0]`getPropertiesForHost()` method, 
-to retry the service request a maximum of 3 times, only when an `ProcessingException` occurs.
+to retry the service request a maximum of 3 times, only when an [hotspot=exception file=1]`ProcessingException` occurs.
 
 InventoryResource.java
 [source, Java, linenums, role='code_column hide_tags=copyright']
 ----
 include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[]
+----
+
+SystemClient.java
+[source, Java, linenums, role='code_column hide_tags=copyright']
+----
+include::finish/inventory/src/main/java/io/openliberty/guides/inventory/client/SystemClient.java[]
 ----
 
 A request to a service might fail for many different reasons. The default Retry policy initiates a retry for every `java.lang.Exception`. 
@@ -675,7 +681,7 @@ include::finish/services.yaml[]
 ----
 [role="edit_command_text"]
 Add the [hotspot=invConfig file=1]`envFrom` field in the [hotspot file=1]`services.yaml` file, 
-to inject the [hotspot=configMap file=0]`ConfigMap` with the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` property into your pods, 
+to inject the [hotspot=configMap file=0]`ConfigMap` with the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` property into your pods. 
 
 
 
