--- a/README.adoc
+++ b/README.adoc
@@ -22,7 +22,7 @@
 :page-seo-title: Retry and Fallback with MicroProfile and Istio Fault Tolerance
 :page-seo-description: How to retry services and add fallback behaviour with MicroProfile and Istio Fault Tolerance
 :guide-author: Open Liberty
-= Running fault-tolerant microservices with Istio Retry and MicroProfile Fallback
+= Developing fault-tolerant microservices with Istio Retry and MicroProfile Fallback
 
 [.hidden]
 NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
@@ -183,10 +183,10 @@ automatically be injected into your pods when you deploy your application. You d
 any additional steps for the sidecars to be injected.
 
 // =================================================================================================
-// Enabling MicroProfile fault tolerance
+// Enabling MicroProfile Fault Tolerance
 // =================================================================================================
 
-== Enabling MicroProfile fault tolerance
+== Enabling MicroProfile Fault Tolerance
 
 Navigate to the `start` directory to begin.
 
@@ -404,7 +404,8 @@ transfer-encoding: chunked
 Since the `system` service is available, the request to the service is successful and returns a `200` response code.
 
 To see the number of times that the `system` service was called, check the logs of the `system` pod using the `kubectl logs` command.
-Remember to replace `[system-pod-name]` with the pod name associated with your `system` service.
+Replace `[system-pod-name]` with the pod name associated with
+your `system` service, which you previously saw when running the `kubectl get pods` command.
 
 ****
 [system]#*{mac} | {linux}*#
@@ -436,8 +437,9 @@ Your single request to the service is successful with a `200` response code.
 
 Now you will make the `system` service unavailable and MicroProfile's Retry policy will be performed.
 
-Pause the `system` service pod to simulate that the service is unavailable. Replace `[system-pod-name]` with the pod name associated with
-your `system` service, which you previously saw when running the `kubectl get pods` command.
+Pause the `system` service pod to simulate that the service is unavailable. 
+Remember to replace `[system-pod-name]` with the pod name associated with your `system` service.
+
 
 [role=command]
 ```
@@ -546,16 +548,16 @@ include::finish/traffic.yaml[]
 Add the [hotspot=istioRetry file=0]`retries` field in the [hotspot file=0]`traffic.yaml` file, to allow Istio to
 retry requests a maximum of 4 times, when the request returns any `5xx` response code. 
 
-The [hotspot=attempts file=0]`attempts` field is required in the configuration of Istio's Retry policy, and it indicates the
+The [hotspot=attempts file=0]`attempts` field is required in the configuration of the 
+https://istio.io/docs/reference/config/networking/v1alpha3/virtual-service/#HTTPRetry[Istio Retry^] policy, and it indicates the
 maximum number of retries that will be attempted for a given request. To retry a request on specific conditions, the
 [hotspot=retryOn file=0]`retryOn` field is used. Since your paused `system` service responds with a `500` response code, 
 you set [hotspot=retryOn file=0]`retryOn` to be `5xx`. 
-Other https://www.envoyproxy.io/docs/envoy/latest/configuration/http_filters/router_filter#x-envoy-retry-on[retry conditions^] 
+Other https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#x-envoy-retry-on[retry conditions^] 
 can also be specified in [hotspot=retryOn file=0]`retryOn`. An optional field that can be provided to Istio's Retry policy
 is `perTryTimeout`, which indicates the amount of time that is allocated to each retry attempt. 
 
-After integrating an Istio Retry policy into your microservices, deploy your microservices again, 
-and wait until all of your deployments are ready and available:
+After integrating an Istio Retry policy into your microservices, deploy your microservices again: 
 
 [role=command]
 ```
@@ -563,6 +565,7 @@ kubectl replace --force -f services.yaml
 kubectl replace --force -f traffic.yaml
 ```
 
+Wait until all of your deployments are ready and available.
 Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
@@ -631,10 +634,10 @@ to have your `system` service retry with only Istio's Retry policy.
 
 
 // =================================================================================================
-// Turning off MicroProfile Fault Tolerance except Fallback
+// Turning off MicroProfile Fault Tolerance
 // =================================================================================================
 
-== Turning off MicroProfile Fault Tolerance except Fallback
+== Turning off MicroProfile Fault Tolerance
 
 When microservices have the same fault tolerance policy enabled by both MicroProfile and Istio, the behaviour of the policy is not as expected. 
 If both MicroProfile and Istio set their own Retry policies on a service,
@@ -643,31 +646,18 @@ The microservice actually multiplies the number of MicroProfile and Istio retrie
 
 In the case that you want your microservices to use a service-mesh architecture, such as Istio, and use it's fault handling without interfering with
 the service's MicroProfile capabilities, you can use a config property offered by MicroProfile.
-      
-=== Setting the MP_Fault_Tolerance_NonFallback_Enabled config property
 
 MicroProfile Fault Tolerance offers a config property `MP_Fault_Tolerance_NonFallback_Enabled` that disables all 
 MicroProfile Fault Tolerance capabilities except fallback. If `MP_Fault_Tolerance_NonFallback_Enabled` is set to false, all of the MicroProfile
 annotations, including `@Retry`, will be switched off and only keep `@Fallback` available to use.
 
-You will use the `MP_Fault_Tolerance_NonFallback_Enabled` config property to disable the retries performed by MicroProfile, 
-to only allow Istio to perform the retries.
-
-[role="code_command hotspot", subs="quotes"]
-----
-#Create the `config.yaml` file.#
-`config.yaml`
-----
-
-config.yaml
-[source, yaml, linenums, indent=0, role="code_column"]
-----
-include::finish/config.yaml[]
-----
-
-In the [hotspot file=0]`config.yaml`, the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` config property is set to false in a [hotspot=configMap file=0]`ConfigMap`. 
+The `MP_Fault_Tolerance_NonFallback_Enabled` config property must be defined in a ConfigMap.
 ConfigMaps store configuration settings about a Kubernetes pod. This configuration needs to be loaded into the pod as an environment variable to be 
 used by the pod's containers. The environment variables are defined in the pod's specification using the `envFrom` field. 
+
+You will use the `MP_Fault_Tolerance_NonFallback_Enabled` config property to disable the retries performed by MicroProfile, 
+to only allow Istio to perform the retries. 
+
 
 [role="code_command hotspot", subs="quotes"]
 ----
@@ -680,29 +670,21 @@ services.yaml
 include::finish/services.yaml[]
 ----
 [role="edit_command_text"]
-Add the [hotspot=invConfig file=1]`envFrom` field in the [hotspot file=1]`services.yaml` file, 
+Set the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` config property to false in a [hotspot=configMap file=0]`ConfigMap`. 
+Add the [hotspot=invConfig file=0]`envFrom` field 
 to inject the [hotspot=configMap file=0]`ConfigMap` with the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` property into your pods. 
 
-
-
 The [hotspot=configName file=0]`name` of the [hotspot=configMap file=0]`ConfigMap`, which is [hotspot=configName file=0]`inventory-config`, 
-becomes the environment variable [hotspot=configName2 file=1]`name` that is specified in the [hotspot=invConfig file=1]`envFrom` field. 
+becomes the environment variable [hotspot=configName2 file=0]`name` that is specified in the [hotspot=invConfig file=0]`envFrom` field. 
 
-Deploy your microservices again, and wait until all of your deployments are ready and available:
+Deploy your microservices again to turn off all MicroProfile capabilities, except fallback:
 
 [role=command]
 ```
 kubectl replace --force -f services.yaml
-kubectl replace --force -f traffic.yaml
 ```
 
-Turn off all MicroProfile capabilities, except fallback, by creating the [hotspot=configMap file=0]`ConfigMap` in [hotspot file=0]`config.yaml`:
-
-[role=command]
-```
-kubectl apply -f config.yaml
-```
-
+Wait until all of your deployments are ready and available.
 Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
@@ -771,12 +753,16 @@ traffic.yaml
 include::finish/traffic.yaml[]
 ----
 
-=== Adding the MicroProfile @Fallback annotation
+// =================================================================================================
+// Using MicroProfile Fallback
+// =================================================================================================
 
-config.yaml
-[source, yaml, linenums, indent=0, role="code_column"]
+== Using MicroProfile Fallback
+
+services.yaml
+[source, yaml, linenums, role='code_column']
 ----
-include::finish/config.yaml[]
+include::finish/services.yaml[]
 ----
 
 Since retrying the requests to your `system` service is still not successful, you need a plan to "fall back" on when the requests fail. 
@@ -806,7 +792,6 @@ Add the [hotspot=fallback file=1]`@Fallback` annotation before the [hotspot=getP
 to call the [hotspot=fallbackMethod file=1]`getPropertiesFallback()` method when a failure occurs.
 
 
-
 The [hotspot=fallbackMethod file=1]`getPropertiesFallback()` method, which is the designated fallback method for the original 
 [hotspot=getPropertiesForHost file=1]`getPropertiesForHost()` method, prints out a warning message in the browser saying that 
 the `system` service may not be running.
@@ -818,7 +803,7 @@ Rebuild your application and integrate the Fallback policy into your microservic
 mvn package
 ```
 
-Deploy your microservices again, and wait until all of your deployments are ready and available:
+Deploy your microservices again to turn off all MicroProfile capabilities, except fallback:
 
 [role=command]
 ```
@@ -826,13 +811,7 @@ kubectl replace --force -f services.yaml
 kubectl replace --force -f traffic.yaml
 ```
 
-Turn off all MicroProfile capabilities, except fallback, by creating the [hotspot=configMap file=0]`ConfigMap` in [hotspot file=0]`config.yaml`:
-
-[role=command]
-```
-kubectl apply -f config.yaml
-```
-
+Wait until all of your deployments are ready and available.
 Pause the `system` service pod to simulate that the service is unavailable:
 
 [role=command]
@@ -919,7 +898,8 @@ Since all of these requests failed, the fallback method [hotspot=fallbackMethod 
 
 == Tearing down your environment
 
-You might want to teardown all the deployed resources as a cleanup step.
+When you are done checking out the MicroProfile and Istio Fault Tolerance features, 
+you might want to teardown all the deployed resources as a cleanup step.
 
 Delete your resources from the cluster.
 
@@ -927,7 +907,6 @@ Delete your resources from the cluster.
 ```
 kubectl delete -f services.yaml
 kubectl delete -f traffic.yaml
-kubectl delete -f config.yaml
 ```
 
 Delete the `istio-injection` label from the default namespace. The hyphen immediately
@@ -946,7 +925,7 @@ kubectl delete -f install/kubernetes/istio-demo.yaml
 ```
 
 ****
-[system]#*{linux} | {mac}*#
+[system]#*{mac}*#
 
 [role=command]
 ```
@@ -958,11 +937,32 @@ for i in install/kubernetes/helm/istio-init/files/crd*yaml; do kubectl delete -f
 ```
 FOR %i in (install\kubernetes\helm\istio-init\files\crd*yaml) DO kubectl delete -f %i
 ```
-****
 
+[system]#*{linux}*#
 
 [role=command]
-include::{common-includes}/kube-minikube-teardown.adoc[]
+```
+for i in install/kubernetes/helm/istio-init/files/crd*yaml; do kubectl delete -f $i; done
+```
+
+Perform the following steps to return your environment to a clean state.
+
+. Point the Docker daemon back to your local machine:
++
+[role=command]
+```
+eval $(minikube docker-env -u)
+```
+
+. Stop and delete your Minikube cluster:
++
+[role=command]
+```
+minikube stop
+minikube delete
+```
+****
+
 
 // =================================================================================================
 // finish
